--- a/django-app/transcribe/templates/transcribe/transcribe.html
+++ b/django-app/transcribe/templates/transcribe/transcribe.html
@@ -6,4 +6,5 @@
         <label for="formFile" class="form-label">Select an audio from your pc</label>
         <input class="form-control" type="file" accept="audio/*" id="formFile">
     </div>
+    <a class="btn btn-info">Transcribe</a>
 {% endblock %}
