--- a/django-app/templates/base.html
+++ b/django-app/templates/base.html
@@ -41,17 +41,8 @@
 
 <body>
 
-<div id="site-main-page" class="container-fluid mt-3">
-    {% if user.is_authenticated %}
-        <div class="row justify-content-end px-4">
-{#            <a href="{% url 'user_management:settings' %}" class="path-link mr-2">#}
-{#                <i class="fas fa-cog"></i>#}
-{#            </a>#}
-{#            <a href="{% url 'user_management:logout' %}" class="path-link font-6">#}
-{#                Logout <i class="fas fa-sign-out-alt ml-2"></i>#}
-{#            </a>#}
-        </div>
-    {% endif %}
+<div id="site-main-page" class="container-fluid mt-lg-3">
+    {% include 'navbar.html' %}
     {% block content %}
     {% endblock %}
 </div>
