Renamed site_javascript.js -> base.js

--- a/django-app/templates/base.html
+++ b/django-app/templates/base.html
@@ -64,7 +64,7 @@
         integrity="sha256-GwAMtRKq8ocZyBdgm1wX+tzd2/nDbb2UGulIdqOItiU=" crossorigin="anonymous"></script>
 
 <!-- Optional JavaScript -->
-<script src="{% static 'js/site_javascript.js' %}"></script>
+<script src="{% static 'js/base.js' %}"></script>
 {% block extra_javascript %}{% endblock %}
 </body>
 </html>
