Fixed boostrap grid

--- a/django-app/transcribe/templates/transcribe/transcribe.html
+++ b/django-app/transcribe/templates/transcribe/transcribe.html
@@ -24,7 +24,9 @@
                 </div>
             </div>
             <div class="row">
-                {% crispy form %}
+                <div class="col">
+                    {% crispy form %}
+                </div>
             </div>
         </div>
     </div>
