--- a/django-app/user_management/templates/user_management/settings.html
+++ b/django-app/user_management/templates/user_management/settings.html
@@ -4,7 +4,27 @@
 {% block title %}{{ block.super }} {% translate "Settings" %}{% endblock %}
 
 {% block content %}
-    <div class="site-box">
-       Settings
+    <div class="row justify-content-center p-4">
+        <div class="site-box p-4 bg-white col-sm-12 col-lg-7 shadow">
+            <div class="row mb-3">
+                <div class="col">
+                    <a href="{% url 'transcribe:transcribe' %}" class="font-6 path-link no-decoration">
+                        <i class="fas fa-chevron-left mr-2"></i>
+                        {% translate "Back" %}
+                    </a>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col">
+                    <h2 class="site-color header-font">{% translate "Settings" %}</h2>
+                    <span class="text-muted header-font">{% trans "Customize your experience" %}</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    Tante cose
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
