--- a/django-app/transcribe/templates/transcribe/transcribe.html
+++ b/django-app/transcribe/templates/transcribe/transcribe.html
@@ -19,7 +19,7 @@
             </div>
             <div class="row mb-4">
                 <div class="col">
-                    <h2 class="site-color header-font">{% translate "Drop an audio" %}</h2>
+                    <h2 class="site-color header-font mb-0">{% translate "Drop an audio" %}</h2>
                     <span class="text-muted header-font">{% translate "Transcription may take up to the duration of the audio" %}</span>
                 </div>
             </div>
