Transcribe: Renamed from transcribe to transcription_form

--- a/django-app/transcribe/templates/transcribe/transcription_form.html
+++ b/django-app/transcribe/templates/transcribe/transcription_form.html
@@ -11,7 +11,7 @@
         <div class="site-box p-4 bg-white col-sm-12 col-lg-7 shadow">
             <div class="row mb-3">
                 <div class="col">
-                    <a href="{% url 'transcribe:transcribe' %}" class="font-6 path-link no-decoration">
+                    <a href="#" class="font-6 path-link no-decoration">
                         <i class="fas fa-chevron-left mr-2"></i>
                         {% translate "Back" %}
                     </a>
