transcription_form.html: fixed translation

--- a/django-app/transcribe/templates/transcribe/transcription_form.html
+++ b/django-app/transcribe/templates/transcribe/transcription_form.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-    {{ block.super }} New audio
+    {{ block.super }} {% translate "New audio" %}
 {% endblock %}
 
 {% block content %}
