transcription_form.html: fixed bootstrap grid

--- a/django-app/transcribe/templates/transcribe/transcription_form.html
+++ b/django-app/transcribe/templates/transcribe/transcription_form.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="row justify-content-center p-4">
-        <div class="site-box p-4 bg-white col-sm-12 col-lg-7 shadow">
+        <div class="site-box p-4 bg-white col-12 col-lg-7 shadow">
             <div class="row mb-3">
                 <div class="col">
                     <a href="#" class="font-6 path-link no-decoration">
