home.html: Fixed transcription-form URL

--- a/django-app/templates/home.html
+++ b/django-app/templates/home.html
@@ -9,7 +9,7 @@
     {% blocktranslate %}
         Welcome to Ghost.
     {% endblocktranslate %}
-    <a class="btn btn-info" href="{% url 'transcribe:transcribe' %}">
+    <a class="btn btn-info" href="{% url 'transcribe:transcription-form' %}">
         Transcribe
     </a>
 {% endblock %}
