media_queries.css: added style rules

--- a/django-app/static/css/media-queries.css
+++ b/django-app/static/css/media-queries.css
@@ -3,4 +3,10 @@
         display: flex;
         justify-content: center !important;
     }
+    .justify-content-mobile-start {
+        justify-content: start !important;
+    }
+    .align-items-mobile-start {
+        align-items: start !important;
+    }
 }
