--- a/django-app/static/css/style.css
+++ b/django-app/static/css/style.css
@@ -199,3 +199,11 @@ nav .logo-font {
 .list-group-item {
     border-radius: 15px;
 }
+
+.font-size-90 {
+    font-size: 90% !important;
+}
+
+.font-size-80 {
+    font-size: 80% !important;
+}
