user_management, authentication: created all the templates needed for the authentication service

--- a/django-app/static/css/style.css
+++ b/django-app/static/css/style.css
@@ -207,3 +207,8 @@ nav .logo-font {
 .font-size-80 {
     font-size: 80% !important;
 }
+
+.picture-small-fixed {
+    height: 40px;
+    width: 40px;
+}
