--- a/django-app/user_management/templates/registration/base_signin.html
+++ b/django-app/user_management/templates/registration/base_signin.html
@@ -13,7 +13,7 @@
                 <div class="mb-5 d-flex flex-column align-items-center">
                     <img src="{% static 'img/ghost.png' %}" alt="Ghost icon" class="picture-small-fixed">
                     <h2 class="font-7 logo-font site-color mb-0 text-center">{% block signing_title %}{% endblock %}</h2>
-                    <span class="small header-font text-center">{% block signing_subtitle %}{% endblock %}</span>
+                    <span class="header-font text-center">{% block signing_subtitle %}{% endblock %}</span>
                 </div>
                 <form method="POST">
                     <div>
@@ -21,7 +21,7 @@
                         <div class="d-flex mt-5 flex-column align-items-center">
                             <input id="submit-signing-button" class="btn site-btn mb-2 w-75 font-7" type="submit"
                                    value="{% block signing_submit_value %}{% endblock %}">
-                            <a class="site-link font-4 text-center" href="{% block undo_url %}{% endblock %}">
+                            <a class="site-link font-5 text-center" href="{% block undo_url %}{% endblock %}">
                                 {% block undo_text %}{% endblock %}
                             </a>
                         </div>
