user_management, login.html and registration.html: updated copy

--- a/django-app/user_management/templates/registration/registration.html
+++ b/django-app/user_management/templates/registration/registration.html
@@ -4,7 +4,7 @@
 {% block title %}{{ block.super }} {% translate "Sign up" %}{% endblock %}
 
 {% block signing_title %}{% translate "Fill the form with your information" %}{% endblock %}
-{% block signing_subtitle %}{% translate "You will be able to quickly transcribe your lectures" %}{% endblock %}
+{% block signing_subtitle %}{% translate "We don't share your data to anyone" %}{% endblock %}
 {% block signing_submit_value %}{% translate "Sign up" %}{% endblock %}
 
 {% block undo_url %}{% url 'user_management:login' %}{% endblock %}
