transcribe, transcription_list.html: changed loading icon in the lsit

--- a/django-app/transcribe/templates/transcribe/transcription_list.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list.html
@@ -16,7 +16,7 @@
                         {% if audio.transcribed %}
                             <i class="fa-solid fa-check site-green-text"></i>
                         {% else %}
-                            <div class="spinner-border spinner-border-sm site-blue-text" role="status"></div>
+                            <i class="fa-solid fa-spinner site-yellow-text"></i>
                         {% endif %}
                         <div class="text-wrap">
                             <h6 class="font-6 header-font">{{ audio.name }}</h6>
