--- a/django-app/templates/navbar.html
+++ b/django-app/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top site-box mb-4">
+<nav class="navbar site-box mb-4">
     <div class="container-fluid">
         <span class="h1 logo-font site-red-text">Ghost</span>
         <div class="d-flex justify-content-end px-4">
