signin.css: updated styles

--- a/django-app/static/css/signin.css
+++ b/django-app/static/css/signin.css
@@ -6,6 +6,8 @@ html,body {
 #site-main-page {
     margin-top: 0 !important;
     padding: 0 !important;
+    display: flex;
+    align-items: center;
 }
 
 #background-column {
