user_management, user deletion: implemented the entire user deletion logic of the web app

--- a/django-app/user_management/templates/user_management/settings.html
+++ b/django-app/user_management/templates/user_management/settings.html
@@ -40,7 +40,7 @@
                         {% endblocktranslate %}
                     </span>
                     <hr>
-                    <a href="#" class="site-red-text font-6 no-decoration">
+                    <a href="{% url 'user_management:delete' %}" class="site-red-text font-6 no-decoration">
                         <i class="fa-solid fa-circle-minus"></i> {% translate "Delete my account" %}
                     </a>
                     <span class="text-muted font-5">
