--- a/django-app/user_management/templates/registration/base_signin.html
+++ b/django-app/user_management/templates/registration/base_signin.html
@@ -2,12 +2,12 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-{#{% block extra_css %}#}
-{#    <link rel="stylesheet" href="{% static 'css/signin.css' %}">#}
-{#{% endblock %}#}
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/signin.css' %}">
+{% endblock %}
 
 {% block content %}
-    <div class="row h-100 w-100 ml-0 mt-5 p-4 justify-content-center">
+    <div class="row h-100 w-100 ml-0 p-4 justify-content-center">
         <div class="site-box p-4 bg-white col-12 col-lg-7 d-flex align-items-center justify-content-center shadow">
             <div id="signing-form">
                 <div class="mb-5 d-flex flex-column align-items-center">
