--- a/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="row p-4 gap-2">
-        {% if audio_object is not None %}
+        {% if transcription_object is not None %}
             {% if request.user_agent.is_mobile %}
                 {% include 'transcribe/transcription_detail.html' %}
             {% else %}
