--- a/django-app/transcribe/templates/transcribe/transcription_list.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list.html
@@ -23,7 +23,10 @@
 
             </a>
         {% empty %}
-            <p>{% translate 'No transcription available' %}</p>
+            <p class="text-muted">{% translate 'No transcription available' %}</p>
+            <a href="{% url 'transcribe:transcription-form' %}" class="site-blue-text font-6">
+                {% translate 'Create your first transcription' %} >
+            </a>
         {% endfor %}
     </div>
 </div>
