--- a/django-app/transcribe/templates/transcribe/transcription_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_detail.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 <div class="site-box p-4 bg-white col shadow">
-    <div class="row mb-5">
+    <div class="row mb-5 gap-3">
         <div class="col-lg-6 col-12">
             <h2 class="header-font mb-0">{{ transcription_object.name }}</h2>
             <h5 class="text-muted">{{ transcription_object.get_language_display|title }}</h5>
@@ -29,6 +29,15 @@
                 {% translate "Last edit" %}
                 {{ transcription_object.last_edit|naturalday }}
             </span>
+        </div>
+        <div class="d-flex col-auto justify-content-start py-2">
+            <i class="fa-solid fa-ellipsis cursor-pointer" data-toggle="dropdown"></i>
+            <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
+                <a class="dropdown-item cursor-pointer"
+                   href="#">
+                    test
+                </a>
+            </div>
         </div>
     </div>
 
