--- a/django-app/user_management/templates/user_management/settings.html
+++ b/django-app/user_management/templates/user_management/settings.html
@@ -8,7 +8,7 @@
         <div class="site-box p-4 bg-white col-sm-12 col-lg-7 shadow">
             <div class="row mb-3">
                 <div class="col">
-                    <a href="{% url 'transcribe:transcription-form' %}" class="font-6 path-link no-decoration">
+                    <a href="{% url 'transcribe:transcription-list' %}" class="font-6 path-link no-decoration">
                         <i class="fas fa-chevron-left mr-2"></i>
                         {% translate "Back" %}
                     </a>
