transcribe, templates, transcription_list_and_detail.html: redesign

--- a/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
@@ -52,7 +52,7 @@
                 </div>
             {% else %}
                 {% include 'transcribe/transcription_list.html' %}
-                <div class="col d-flex justify-content-center align-items-center mt-4 flex-column">
+                <div class="col d-flex align-items-center mt-4 flex-column" style="margin-top: 15rem !important;">
                     <p class="d-flex flex-column mb-0">
                         <span class="font-7">{% translate 'Select' %}</span>
                         <span class="font-7 font-size-150">{% translate 'a transcription' %}</span>
