transcribe, templates, transcription_detail.html: added check that the Transcription text is not None to show it

--- a/django-app/transcribe/templates/transcribe/transcription_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_detail.html
@@ -58,6 +58,11 @@
                     {% endblocktranslate %}
                 </p>
             {% endif %}
+            <p>
+                {% if transcription_object.text is not None %}
+                    {{ transcription_object.text }}
+                {% endif %}
+            </p>
         </div>
     </div>
 </div>
