--- a/django-app/static/css/style.css
+++ b/django-app/static/css/style.css
@@ -249,3 +249,61 @@ hr {
     border-style: solid;
     width: 100%;
 }
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    background-color: #ffffff;
+}
+
+.dropdown-item {
+    color: #464c52 !important;
+}
+
+.dropdown-item:hover {
+    background-color: #edf0f2;
+    color: #464c52 !important;
+}
+
+.dropdown-item-red {
+    color: #FF6B6C !important;
+}
+
+.dropdown-item-red:hover {
+    background-color: #FF6B6C !important;
+    color: white !important;
+}
+
+.dropdown-item:active {
+    outline: none !important;
+}
+
+.dropdown-menu input {
+    border: 1px solid #ced4da;
+    font-weight: 400;
+}
+
+.dropdown-menu input:focus {
+    border: 3px solid #525252;
+}
+
+.btn.dropdown-toggle {
+    border-radius: 10px !important;
+}
+
+.dropdown-menu {
+    border-radius: 15px;
+    border-color: transparent;
+    box-shadow:  0 .5rem 1rem rgba(0,0,0,.15) !important;
+}
+
+.dropdown-item.active {
+    background-color: #247BA0;
+    color: white !important;
+}
+
+.dropdown-item.bg-danger-hover:hover span {
+    color: white !important;
+}
