--- a/django-app/transcribe/templates/transcribe/transcription_delete.html
+++ b/django-app/transcribe/templates/transcribe/transcription_delete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% load crispy_forms_tags %}
+{% load transcribe_filters %}
 
 {% block title %}
     {{ block.super }} {% translate "Delete transcription" %}
