--- a/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
@@ -3,10 +3,19 @@
 
 {% block extra_css %}
     <style>
-        hr {
-            border-style: solid;
+        #processing-transcription-hr {
+            width: 300px;
+            height: 3px;
+            opacity: 100%;
+        }
+        #transcription-header-hr {
+            width: 200px;
+            height: 3px;
+            opacity: 100%;
+        }
+        #no-audio-hr {
             width: 350px;
-            height: 5px !important;
+            height: 5px;
             opacity: 100%;
         }
     </style>
