added custom id to customize style

--- a/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
@@ -56,7 +56,7 @@
                         <span class="font-5 display-4">{% translate 'No' %}</span>
                         <span class="display-3 font-7">{% translate 'transcription' %}</span>
                     </p>
-                    <hr class="site-red-text mb-2 mt-0">
+                    <hr id="no-audio-hr" class="site-red-text mb-2 mt-0">
                     <p>
                         <span class="font-5 font-size-150">{% translate 'available' %}</span>
                     </p>
