templates, home.html: refactored translations

--- a/django-app/templates/home.html
+++ b/django-app/templates/home.html
@@ -6,9 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    {% blocktranslate %}
-        Welcome to Ghost.
-    {% endblocktranslate %}
+    {% translate 'Welcome to Ghost.' %}
     <a class="btn btn-info" href="{% url 'transcribe:transcription-form' %}">
         Transcribe
     </a>
