templates, home.html: copy

--- a/django-app/templates/home.html
+++ b/django-app/templates/home.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    {% translate 'Welcome to Ghost.' %}
+    {% translate 'Transcription is one step away' %}.
     <a class="btn btn-info" href="{% url 'transcribe:transcription-form' %}">
         Transcribe
     </a>
