transcribe, templates, transcription_delete.html: added margin

--- a/django-app/transcribe/templates/transcribe/transcription_delete.html
+++ b/django-app/transcribe/templates/transcribe/transcription_delete.html
@@ -56,7 +56,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mt-3">
                 <div class="col d-flex justify-content-end mobile-center">
                     <form method="POST"> {% csrf_token %}
                         <input id="delete-transcription-submit"
